<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".tugasPertemuan4.Dashboard2">

    <!-- AppBar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red_button"
            app:layout_scrollFlags="scroll|snap"
            app:subtitleTextColor="@android:color/white"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- Konten utama -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Header -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/headerCard"
                android:layout_width="150dp"
                android:layout_height="64dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:cardCornerRadius="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/app_icon" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/heyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/robot_regular"
                        android:text="@string/hey"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/nameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="70dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/name_label"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Search Bar -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/searchBar"
                android:layout_width="320dp"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/grey_transparent"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="@id/headerCard"
                app:layout_constraintTop_toBottomOf="@id/headerCard">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.card.MaterialCardView>

            <!-- Genre Card 1 -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardGenre"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@id/searchBar"
                app:layout_constraintTop_toBottomOf="@id/searchBar">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hihgjack" />
            </com.google.android.material.card.MaterialCardView>

            <!-- Genre Card 2 -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardGenre2"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toEndOf="@id/cardGenre"
                app:layout_constraintTop_toTopOf="@id/cardGenre">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/timely" />
            </com.google.android.material.card.MaterialCardView>

            <!-- Genre Card 3 -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardGenre3"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toEndOf="@id/cardGenre2"
                app:layout_constraintTop_toTopOf="@id/cardGenre">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ado" />
            </com.google.android.material.card.MaterialCardView>

            <!-- What's Coming -->
            <TextView
                android:id="@+id/whatsComingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="What's Coming to"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/searchBar"
                app:layout_constraintTop_toBottomOf="@id/cardGenre" />

            <!-- Album Card 1 -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView3"
                android:layout_width="180dp"
                android:layout_height="430dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/transparent"
                app:layout_constraintStart_toStartOf="@id/whatsComingText"
                app:layout_constraintTop_toBottomOf="@id/whatsComingText">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/posterKingGnu"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/king_gnu_live"
                        android:clickable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:singleLine="true"
                        android:fontFamily="@font/roboto_bold"
                        android:text="The Greatest Unknown Dome Tour"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="King Gnu"
                        android:textColor="@color/semitransparent"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lokasi_konser"
                        android:textColor="@color/semitransparent"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waktu_konser"
                        android:textColor="@color/semitransparent"
                        android:textSize="12sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Album Card 2 -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView4"
                android:layout_width="180dp"
                android:layout_height="430dp"
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/transparent"
                app:layout_constraintStart_toEndOf="@id/cardView3"
                app:layout_constraintTop_toTopOf="@id/cardView3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/posterBackNumber"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/back_number_live"
                        android:clickable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:singleLine="true"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Anti Sleeps Tour"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Back Number"
                        android:textColor="@color/semitransparent"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lokasi_konser"
                        android:textColor="@color/semitransparent"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waktu_konser"
                        android:textColor="@color/semitransparent"
                        android:textSize="12sp" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardGenre2" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
